--- a/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.product-summary.css
+++ b/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.product-summary.css
@@ -769,11 +769,11 @@
 }
 
 .price_className .price_sellingPriceContainer:first-child .currencyContainer {
-    color: #3e3e3f;
+    color: #ee1d23;
 }
 
 .element--principal__shelf:hover .price_className .price_sellingPriceContainer:last-child .currencyContainer {
-    color: #ee1d23 !important;
+    color: #3e3e3f !important;
 }
 
 .diagonalCross {
