--- a/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.store-components.css
+++ b/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.store-components.css
@@ -25,7 +25,7 @@
     font-family: "Icon";
     content: "\e929";
     font-size: 39px;
-    color: #3E3E3F;
+    color: #ee1d23;
 }
 
 .imageElement--whatsapp-fixed-button {
@@ -115,7 +115,7 @@
     top: 10px;
     left: 0;
     width: 50px;
-    background-color: #2617F2;
+    background-color: #ee1d23;
     border-radius: 0 2px 2px 0;
 }
 
