Return color price list class currencyContainer y withdraw icono de jum digital en el footer

--- a/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.store-icons.css
+++ b/jumpdigitaldev-stop-io-build-00fb5b0f07ac/styles/css/vtex.store-icons.css
@@ -238,11 +238,11 @@
     color: #000;
 }
 
-:global(.vtex-store-components-3-x-imageElementLink--logo__jump)::before {
+/*:global(.vtex-store-components-3-x-imageElementLink--logo__jump)::before {
     content: "\e922";
     font-size: 25px;
     color: #000;
-}
+}*/
 
 :global(.vtex-search-result-3-x-filterAvailable) :global(.vtex-search-result-3-x-filterIcon)::before {
     content: "\e911";
